--- a/data_genesis/spring/controller/springControllerDelete.templ
+++ b/data_genesis/spring/controller/springControllerDelete.templ
@@ -1,4 +1,4 @@
-public RedirectView delete([primaryType] [primaryNameMin]){
+public ResponseEntity<HttpStatus> delete(@RequestParam [primaryType] [primaryNameMin]){
     repo.deleteById([primaryNameMin]);
-    return new RedirectView("tocrud[classNameMin].do");
+    return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
 }
