--- a/data_genesis/spring/controller/springControllerInsert.templ
+++ b/data_genesis/spring/controller/springControllerInsert.templ
@@ -1,6 +1,6 @@
-public RedirectView insert([controllerMethodParameter]){
+public ResponseEntity<[returnType]> insert([controllerMethodParameter]){
     [classNameMaj] o=new [classNameMaj]();
     [controllerChangeInstanciation]
     repo.save(o);
-    return new RedirectView("tocrud[classNameMin].do");
+    return ResponseEntity.ok(o);
 }
