--- a/data_genesis/spring/controller/springControllerUpdate.templ
+++ b/data_genesis/spring/controller/springControllerUpdate.templ
@@ -1,7 +1,7 @@
-public RedirectView update([controllerMethodParameter]){
+public [returnType] update([controllerMethodParameter]){
     [classNameMaj] o=new [classNameMaj]();
     o.set[primaryNameMaj]([primaryParse]);
     [controllerChangeInstanciation]
     repo.save(o);
-    return new RedirectView("tocrud[classNameMin].do");
+    return ResponseEntity.ok(o);
 }
