--- a/data_genesis/spring/controller/springControllerUpdate.templ
+++ b/data_genesis/spring/controller/springControllerUpdate.templ
@@ -1,4 +1,4 @@
-public [returnType] update([controllerMethodParameter]){
+public ResponseEntity<[returnType]> update([controllerMethodParameter]){
     [classNameMaj] o=new [classNameMaj]();
     o.set[primaryNameMaj]([primaryParse]);
     [controllerChangeInstanciation]
