--- a/venteVue/src/app/add-vente/add-vente.component.html
+++ b/venteVue/src/app/add-vente/add-vente.component.html
@@ -6,7 +6,7 @@
 </select>   </div> 
 <div class="mb-3">
     <label for="nombre" class="form-label">nombre</label>
-    <input type="text" class="form-control" id="nombre" formControlName="nombre">
+    <input type="number" class="form-control" id="nombre" formControlName="nombre">
   </div> 
 <div class="mb-3">
     <label for="date" class="form-label">date</label>
