--- a/data_genesis/spring/controller/springControllerRead.templ
+++ b/data_genesis/spring/controller/springControllerRead.templ
@@ -1,3 +1,3 @@
 public ResponseEntity<List<[returnType]>> crudpage(){
-    return ResponseEntity.ok(repo.findAll());
+    return ResponseEntity.ok((List<[returnType]>)repo.findAll());
 }
