--- a/data_genesis/vue/add/component.templ
+++ b/data_genesis/vue/add/component.templ
@@ -9,14 +9,16 @@ import { Observable } from 'rxjs';
 [importForeign]
 
 @Component({
-  selector: 'app-add-[nomClasse]',
+  selector: 'app-[nomClasse]',
   standalone: true,
-  templateUrl: './add-[nomClasse].component.html',
-  styleUrls: ['./add-[nomClasse].component.css'],
+  templateUrl: './[nomClasse].component.html',
+  styleUrls: ['./[nomClasse].component.css'],
   imports : [CommonModule,ReactiveFormsModule]
 })
-export class Add[GnomClasse]Component {
+export class [GnomClasse]Component {
   [nomClasse]Form!: FormGroup; // Définir un FormGroup pour gérer le formulaire
+  liste[GnomClasse] !: Observable<[GnomClasse]Model[]>;
+  [nomClasse] !: [GnomClasse]Model;
   [attributForeign]
 
   constructor(private formBuilder: FormBuilder, private [nomClasse]Service: [GnomClasse]Service,private router:Router[constructorForeign]) {
@@ -26,10 +28,19 @@ export class Add[GnomClasse]Component {
   }
 
   ngOnInit() {
+    this.getAll[GnomClasse]s();
     [appelFonctionForeign]
   }
 
+  getAll[GnomClasse]s() {
+      this.liste[GnomClasse] = this.[nomClasse]Service.getAll(); 
+  }
+
   [fonctionForeign]
+
+  resetForm(): void {
+      this.[nomClasse]Form.reset(); // Réinitialiser le formulaire
+  }
 
   submit() {
     if (this.[nomClasse]Form.valid) {
@@ -37,7 +48,7 @@ export class Add[GnomClasse]Component {
       this.[nomClasse]Service.create([dataDeclarationArgument]).subscribe({
         next: (response) => {
           console.log('Create successful:', response); // Affichez la réponse renvoyée par la méthode create
-          this.router.navigateByUrl(`/liste[GnomClasse]`);
+          this.getAll[GnomClasse]s();
         },
         error: (error) => {
           console.error('Error:', error); // Affichez les éventuelles erreurs
@@ -45,4 +56,41 @@ export class Add[GnomClasse]Component {
       });
     }
   }
+
+  delete[GnomClasse](id:number | undefined):void{
+        this.[nomClasse]Service.delete(id).subscribe({
+          next: (response) => {
+            console.log('delete successful:', response); 
+            this.getAll[GnomClasse]s();
+          },
+          error: (error) => {
+            console.error('Error:', error); 
+          }
+        });
+  }
+
+  versUpdate([nomClasse]:[GnomClasse]Model){
+        this.[nomClasse] = [nomClasse];
+
+        this.[nomClasse]Form.patchValue({
+          [patchValue]
+        });
+  }
+
+
+  update() {
+      if (this.[nomClasse]Form.valid) {
+        [dataDeclaration]
+        const id = this.[nomClasse].[id];
+        this.[nomClasse]Service.update(id,[dataDeclarationArgument]).subscribe({
+          next: (response) => {
+            console.log('Create successful:', response); // Affichez la réponse renvoyée par la méthode create
+            this.getAll[GnomClasse]s();
+          },
+          error: (error) => {
+            console.error('Error:', error); // Affichez les éventuelles erreurs
+          }
+        });
+      }
+    }
 }
