--- a/data_genesis/vue/add/html.templ
+++ b/data_genesis/vue/add/html.templ
@@ -1,4 +1,61 @@
-<form [formGroup]="[nomClasse]Form" (ngSubmit)="submit()">
-    [input]
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+<div>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="resetForm()">
+  Add
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">[GnomClasse]</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="[nomClasse]Form" (ngSubmit)="submit()">
+            [input]
+          <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Add</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<table class="table">
+    <thead>
+      <tr>
+        [tete]
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let [nomClasse] of liste[GnomClasse] | async">
+        [body]
+        <td><button type="button" class="btn btn-primary" (click)="delete[GnomClasse]([nomClasse].[id])">Delete</button></td>
+        <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal"  (click)="versUpdate([nomClasse])">
+          Update
+        </button></td>
+      </tr>
+    </tbody>
+  </table>
+
+
+<div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Article</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="[nomClasse]Form" (ngSubmit)="update()">
+            [input]
+          <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Update</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+</div>
