--- a/data_genesis/spring/controller/springControllerRead.templ
+++ b/data_genesis/spring/controller/springControllerRead.templ
@@ -1,3 +1,3 @@
-public ResponseEntity<Page<[returnType]>> crudpage(@RequestParam(defaultValue = "0") int page,@RequestParam(defaultValue = "10") int size){
-    return ResponseEntity.ok((Page<[returnType]>)repo.findAll(PageRequest.of(page, size)));
+public ResponseEntity<[returnType]> crudpage(){
+    return ResponseEntity.ok([returnType])repo.findAll();
 }
