--- a/data_genesis/vue/add/component.templ
+++ b/data_genesis/vue/add/component.templ
@@ -37,6 +37,7 @@ export class [GnomClasse]Component {
   }
 
   getAll[GnomClasse]s() {
+      this.[nomClasse]Service.getAll(this.page, this.size).subscribe(
         data => {
           this.nombrePage = new Array(data.totalPages);
           this.liste[GnomClasse] = data.content;
