--- a/data_genesis/vue/add/component.templ
+++ b/data_genesis/vue/add/component.templ
@@ -33,7 +33,26 @@ export class [GnomClasse]Component {
   }
 
   getAll[GnomClasse]s() {
-      this.liste[GnomClasse] = this.[nomClasse]Service.getAll(); 
+      this.[nomClasse]Service.getAll(this.page, this.size).subscribe(
+        data => {
+          this.nombrePage = new Array(data.totalPages);
+          this.liste[GnomClasse] = data.content;
+        }
+      );
+  }
+
+  changePage(page:number){
+      if(page===-1){
+        page = this.page + 1;
+      }else if(page===-2){
+        page = this.page - 1;
+      }
+
+      if(page < 0 || page >= this.nombrePage.length){
+         page = 0;
+      }
+      this.page = page;
+      this.getAll[GnomClasse]s();
   }
 
   [fonctionForeign]
