--- a/data_genesis/vue/service/service.templ
+++ b/data_genesis/vue/service/service.templ
@@ -14,9 +14,14 @@ export class [GnomClasse]Service{
 
     constructor(private http: HttpClient) { }
 
-    getAll(page:number,size:number): Observable<any> {
-        const url = `${this.baseUrl}/tocrud[nomClasse].do?page=${page}&size=${size}`;
+    getAllPagination(page:number,size:number): Observable<any> {
+        const url = `${this.baseUrl}/tocrudPagination[nomClasse].do?page=${page}&size=${size}`;
         return this.http.get<any>(url);
+    }
+
+    getAll(): Observable<[GnomClasse]Model[]> {
+        const url = this.baseUrl+'/tocrud[nomClasse].do';
+        return this.http.get<[GnomClasse]Model[]>(url);
     }
 
     create([argumentCreate]): Observable<any> {
