--- a/data_genesis/spring/Repository.templ
+++ b/data_genesis/spring/Repository.templ
@@ -1,9 +1,12 @@
 package com.[projectNameMin].entities;
 
+import java.util.Optional;
 import org.springframework.data.repository.CrudRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 
 public interface [classNameMaj]Repository extends CrudRepository<[classNameMaj],Integer> {
     Page<[classNameMaj]> findAll(Pageable pageable);    
+
+    Optional<classNameMaj> findByEmailAndMdp(String login, String pwd);
 }
