--- a/data_genesis/spring/controller/springControllerRead.templ
+++ b/data_genesis/spring/controller/springControllerRead.templ
@@ -1,3 +1,3 @@
-public ResponseEntity<[returnType]> crudpage(){
-    return ResponseEntity.ok([returnType])repo.findAll();
+public ResponseEntity<List<[returnType]>> crudpage(){
+    return ResponseEntity.ok((List<[returnType]>)repo.findAll());
 }
