--- a/data_genesis/vue/add/html.templ
+++ b/data_genesis/vue/add/html.templ
@@ -41,9 +41,9 @@
 
     <nav aria-label="Page navigation example">
       <ul class="pagination">
-        <li class="page-item"><a class="page-link" href="#" (click)="changePage(-2)">Previous</a></li>
-        <li class="page-item" *ngFor="let p of nombrePage;let i = index"><a class="page-link" href="#" (click)="changePage(i)">{{i+1}}</a></li>
-        <li class="page-item"><a class="page-link" href="#" (click)="changePage(-1)">Next</a></li>
+        <li class="page-item"><a class="page-link" (click)="changePage(-2)">Previous</a></li>
+        <li class="page-item" *ngFor="let p of nombrePage;let i = index"><a class="page-link" (click)="changePage(i)">{{i+1}}</a></li>
+        <li class="page-item"><a class="page-link" (click)="changePage(-1)">Next</a></li>
       </ul>
     </nav>
   </table>
