--- a/data_genesis/spring/Repository.templ
+++ b/data_genesis/spring/Repository.templ
@@ -4,9 +4,12 @@ import java.util.Optional;
 import org.springframework.data.repository.CrudRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.repository.Query;
+import org.springframework.data.repository.query.Param;
 
 public interface [classNameMaj]Repository extends CrudRepository<[classNameMaj],Integer> {
     Page<[classNameMaj]> findAll(Pageable pageable);    
 
-    Optional<classNameMaj> findByEmailAndMdp(String login, String pwd);
+    @Query("SELECT u FROM Utilisateur u WHERE u.email = :email AND u.mdp = :mdp")
+    Optional<[classNameMaj]> findUserByEmailAndMdp(@Param("email") String email, @Param("mdp") String mdp);
 }
