--- a/data_genesis/spring/controller/springControllerUserAuth.templ
+++ b/data_genesis/spring/controller/springControllerUserAuth.templ
@@ -1,8 +1,9 @@
-public ResponseEntity<[returnType]> authenticateUser(@RequestParam String login,@RequestParam String pwd) throws NoSuchAlgorithmException{
+public ResponseEntity<Integer> authenticateUser(@RequestParam String login,@RequestParam String pwd) throws NoSuchAlgorithmException{
     Optional<[classNameMaj]> u=repo.findUserByEmailAndMdp(login, pwd);
     if(u.isPresent()){
         [classNameMaj] o=u.get();
-        return ResponseEntity.ok(o);
+        Integer id = o.getId[classNameMaj]();
+        return ResponseEntity.ok(id);
     }
     return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(null);
 }
