--- a/data_genesis/vue/route/route.templ
+++ b/data_genesis/vue/route/route.templ
@@ -1,4 +1,6 @@
 import { Routes } from '@angular/router';
+import { authGuard } from './auth.guard';
+import { LoginComponent } from './login/login.component';
 [importRoute]
 
 export const routes: Routes = [
