--- a/data_genesis/projectVue/src/app/app.component.html
+++ b/data_genesis/projectVue/src/app/app.component.html
@@ -1,1 +1,6 @@
+<!-- app.component.html -->
+<ng-container *ngIf="!isLoginPage()">
+    <app-header></app-header>
+  </ng-container>
 <router-outlet></router-outlet>
+  
