--- a/data_genesis/vue/add/component.templ
+++ b/data_genesis/vue/add/component.templ
@@ -17,7 +17,7 @@ import { Observable } from 'rxjs';
 })
 export class [GnomClasse]Component {
   [nomClasse]Form!: FormGroup; // Définir un FormGroup pour gérer le formulaire
-  liste[GnomClasse] !: Observable<[GnomClasse]Model[]>;
+  liste[GnomClasse] !: [GnomClasse]Model[];
   [nomClasse] !: [GnomClasse]Model;
   [attributForeign]
 
