--- a/data_genesis/spring/controller/springControllerFindById.templ
+++ b/data_genesis/spring/controller/springControllerFindById.templ
@@ -1,3 +1,3 @@
-public ResponseEntity<[returnType]> findById(Integer id){
+public ResponseEntity<Optional<[returnType]>> findById(@RequestParam Integer id){
     return ResponseEntity.ok(repo.findById(id));
 }
