--- a/data_genesis/vue/route/route.templ
+++ b/data_genesis/vue/route/route.templ
@@ -1,6 +1,8 @@
 import { Routes } from '@angular/router';
 import { authGuard } from './auth.guard';
 import { LoginComponent } from './login/login.component';
+import { SignInComponent } from './sign-in/sign-in.component';
+
 [importRoute]
 
 export const routes: Routes = [
