--- a/data_genesis/vue/authentification/sign-in.templ
+++ b/data_genesis/vue/authentification/sign-in.templ
@@ -1,7 +1,7 @@
 import { Component } from '@angular/core';
 import { FormBuilder, FormGroup, ReactiveFormsModule, Validators } from '@angular/forms';
 import { Router } from '@angular/router';
-import { AdministrateurService } from '../service/[GnomClasse]Service';
+import { [GnomClasse]Service } from '../service/[GnomClasse]Service';
 
 @Component({
   selector: 'app-sign-in',
